@@ -5,6 +5,7 @@
 	* Added "alpha" and "lex" as aliases for "index" to the facet sorting option
 	* Added support for conditions in templates
 	* Changed tx_solr_Template to tolerate if viewhelpers could not be loaded
+	* Added support for named loops in tx_solr_Template
 
 2010-09-14  Markus Goldbach  <markus.goldbach@dkd.de>
 
